--- a/src/main/webapp/info.html
+++ b/src/main/webapp/info.html
@@ -2,20 +2,13 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link rel="shortcut icon" type="image/ico" href="http://www.datatables.net/favicon.ico" />
-		
-		<title>DataTables example</title>
+		<title>Customer info</title>
 		<style type="text/css" title="currentStyle">
 			@import "external/DataTables-1.9.4/media/css/demo_page.css";
-			@import "external/DataTables-1.9.4/media/css/jquery.dataTables_themeroller.css";
-			@import "external/DataTables-1.9.4/media/css/demo_table.css";
-			@import "external/DataTables-1.9.4/examples/examples_support/themes/smoothness/jquery-ui-1.8.4.custom.css";
 		</style>
 		<script type="text/javascript" language="javascript" src="external/DataTables-1.9.4/media/js/jquery.js"></script>
-		<script type="text/javascript" language="javascript" src="external/DataTables-1.9.4/media/js/jquery.dataTables.js"></script>
 		<script type="text/javascript" language="javascript" src="external/Highcharts/js/highcharts.js"></script>
 		<script type="text/javascript" language="javascript" src="js/lib.js"></script>
-		<script type="text/javascript" language="javascript" src="js/table.js"></script>
 		<script type="text/javascript" language="javascript" src="js/charts.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function() {
@@ -25,12 +18,23 @@
 				    return results[1] || 0;
 				}
 				var id = $.urlParam('id');
-				console.log(id);
 
 				var server = $.rhServer("http://pccmsdqm04:8112");
 
-				var q1 = server.query("select * from store.sales c where c.\"SAL_CUS_ID\" = ?");
-				$('#dynamic').rhTable({query: q1, paramFunc: function(){ return {p1: id} }, maxColumns: 8} );
+				var q1 = server.query("SELECT * FROM store.customers c WHERE c.ID = :p1");
+				q1.data({ params: {p1: id},
+					callBack: function(data){
+						$('#id').text('ID: '+data.data[0][0]);
+						$('#name').text('Name: '+data.data[0][1]);
+						$('#city').text('City: '+data.data[0][2]);
+						$('#country').text('Country: '+data.data[0][3]);
+					}
+				});
+
+				var q2 = server.query("SELECT c.SAL_COST,b.BRAND FROM store.sales c INNER JOIN store.products b ON c.SAL_PRO_ID = b.ID WHERE c.SAL_CUS_ID = :p1 ");
+
+				$('#chart').rhChart3({query: q2, params: {p1: id}});
+
 			} );
 		</script>
 
@@ -38,12 +42,22 @@
 	</head>
 		<body id="dt_example">
 
-		<div id="container" style="width:80%;">	
-			<h1>Sales</h1>
-			<div class="test" id="dynamic"></div>
+		<div id="container" style="width:20%;">	
+			<h1>Customer</h1>
+			<div id="info">
+				<ul>  
+					<li id="id"></li>  
+					<li id="name"></li>  
+					<li id="city"></li>  
+					<li id="country"></li>
+				</ul>
+			</div>
 		</div>
-
-		<br>
-
+		
+		<div id="chart-container" style="width:90%; margin-right:auto; margin-left:auto;">
+			<h1>Money spent on buying products of specific brand</h1>
+			<div id="chart">
+		</div>
+		
 	</body>
 </html>
